# ff7r-trainer

./: .gitignore  LICENSE.txt  TRAiNER.spec.default  build.bat  build_all.bat  build_cy.bat  pyproject.toml  readme.md  requirements.txt  setup.py  setup_auto.py
app/: gui.py  launch.py  offsets.py  settings.py
